syntax = "proto3";

option csharp_namespace = "API.UserAuth";

package userauth;

service UserAuthService {
  rpc Rregister(RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string access_token = 1;
}

message RegisterRequest {
	string email = 1;
	string password = 2;
	string username = 3;
}
message RegisterResponse {

}